--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-  background: url(images/dark-texture-watercolor.jpg);
+  background: url(images/abstract_background_1_1.jpg);
   font-family: "Trebuchet MS";
   text-align: center;
   padding: 5px 5px 5px 5px;
@@ -15,12 +15,12 @@ h2 {
 
 html {
   font-family: "Trebuchet MS";
-  color: white;
+  color: brown;
   font-weight: bold;
 }
 nav {
   display: flex;
-  background: url(images/dark-texture-watercolor.jpg);
+  background: url(images/abstract_background_1_1.jpg);
   justify-content: space-around;
   padding-left: -100cm;
 }
@@ -32,7 +32,7 @@ div {
   font-family: serif;
 }
 p:hover {
-  background-color: rgb(20, 15, 15);
+  background-color: rgb(248, 233, 98);
 }
 .searchbar {
   display: flex;
